// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Map > render correctly 1`] = `
<map
  enable3D={false}
  enableOverlooking={false}
  enableRotate={false}
  enableSatellite={false}
  enableScroll={true}
  enableTraffic={false}
  enableZoom={true}
  latitude={0}
  layerStyle={1}
  longitude={0}
  maxScale={20}
  minScale={3}
  rotate={0}
  scale={16}
  setting={{}}
  showCompass={false}
  showLocation={false}
  showScale={false}
/>
`;

exports[`Map render correctly 1`] = `
<map
  enable3D={false}
  enableOverlooking={false}
  enableRotate={false}
  enableSatellite={false}
  enableScroll={true}
  enableTraffic={false}
  enableZoom={true}
  latitude={0}
  layerStyle={1}
  longitude={0}
  maxScale={20}
  minScale={3}
  rotate={0}
  scale={16}
  setting={Object {}}
  showCompass={false}
  showLocation={false}
  showScale={false}
/>
`;
